--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
-<p>We believe a diverse community of peers working, learning, and solving problems together can create the stronger, more representative ecosystem journalism needs to thrive. Through <a href="/what/conferences">events for newsroom coders and journalists</a> and a wide range of <a href="/what/community">community and project support programs</a>, we enable collaboration across organizations. Learn more about what we do or find out how you <a href="/getinvolved">can get involved</a>.</p>
+<p>We believe a diverse community of peers working, learning, and solving problems together can create the stronger, more representative ecosystem that journalism needs to thrive. Through <a href="/what/conferences">events for newsroom coders and journalists</a> and a wide range of <a href="/what/community">community and project support programs</a>, we enable collaboration across organizations. Learn more about what we do or find out how you <a href="/getinvolved">can get involved</a>.</p>
 
 <h2 style="margin-top: 30px;">From the OpenNews Blog</h2>
 
