--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.
 </em></p>
 
-<h2>Keep up with the journalism code community</h2>
-<img src="/media/img/code-convening-postits.jpg" alt="A smattering of post-its" style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Post-its abound at the <a href="https://source.opennews.org/articles/building-guide-open-sourcing-newsroom-code/">OpenNews code convening to create an open-sourcing playbook</a> for the newsroom.</p>
+<h2>New Home, New Programs: Exciting Updates Abound</h2>
+<img src="/media/img/srccon2015-photocredit-erik-westra-41.jpg" alt="A big red balloon on a blue sky" style="width: 100%">
+<p class="caption" style="margin-top: 10px;">We're flying off to a new home. And later this year we'll return to the site of this photo, with <a href="httsp://srccon.org">SRCCON</a> back in Minneapolis. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig"><a href="https://source.opennews.org">On Source</a>, the journalism-code community generously shares open-source code and the process behind projects from newsrooms big and small. Catch up with <a href="https://source.opennews.org/articles/how-usability-testing-can-improve-news-stories/">usability tips</a>, a <a href="https://source.opennews.org/articles/how-npr-transcribes-and-fact-checks-debates-live/">live fact-checking walk through</a>, and guides to topics like <a href="https://source.opennews.org/guides/defending-accounts/">defending against common attacks</a>. Coming in the new year, new features and a new look for Source.</p>
+<p class="bodybig">We're thrilled to share news about a new grant from the Knight Foundation for our work. With this grant, we also have a new home as a project of <a href="http://www.communitypartners.org/">Community Partners</a>. Mozilla nurtured our program for six years, and we're excited about this chance to strike out on our own and expand our offerings of events and community supports. Read all the details on our blog.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
