SRCCON announcement and update, plus board+cordelia on about page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.
 </em></p>
 
-<h2>Looking Ahead to SRCCON</h2>
+<h2The care and support of news nerds</h2>
 <img src="/media/img/srccon16-3.jpg" alt="Tables of people sketching in front of a display screen" style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Participants at SRCCON 2016 focus on their sketches. SRCCON again will feature illustration sessions this year. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">This August our <a href="(https://srccon.org/">annual conference SRCCON</a> returns to Minneapolis for two amazing days building better newsroom code, culture, and process—together. We're looking forward to more than <a href="https://srccon.org/sessions/">fifty collaborative sessions</a> covering hiring, business models, data, and more. Learn more about <a href="/blog/tags/SRCCON/">how we build SRCCON</a>.</p>
+<p class="bodybig">We're back in Minneapolis for our <a href="/srccon-2017-care">annual conference SRCCON</a>, and you can <a href="https://srccon.org/transcription">follow along remotely</a>. Plus, SRCCON is back again this December, with a smaller, topical event, <a href="/blog/srccon-work">SRCCON:WORK</a>.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
