--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <img src="/media/img/srccon-group-erik-westra.jpg" alt="Group of people collaborating at a laptop" style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Participants at SRCCON 2015 collaborate on ideas. SRCCON returns to Minneapolis this year. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">We're back in Minneapolis for our <a href="/srccon-2017-care">annual conference SRCCON</a>, and you can <a href="https://srccon.org/transcription">follow along remotely</a>. Plus, SRCCON is back again this December, with a smaller, topical event, <a href="/blog/srccon-work">SRCCON:WORK</a>.</p>
+<p class="bodybig">We're back in Minneapolis for our <a href="/blog/srccon-2017-care">annual conference SRCCON</a>, and you can <a href="https://srccon.org/transcription">follow along remotely</a>. Plus, SRCCON is back again this December, with a smaller, topical event, <a href="/blog/srccon-work">SRCCON:WORK</a>.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
