language updates for srccon work

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.
 </em></p>
 
-<h2>SRCCON:WORK, for the people transforming newsrooms</h2>
+<h2>Introducing SRCCON:WORK</h2>
 <img src="/media/img/srccon2017conversation.jpg" alt="A session audience at SRCCON 2017." style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Like the one engaging this SRCCON 2017 crowd, we expect many captivating conversations at SRCCON:WORK. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
