updating pieces based on dan's feedback

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <img src="/media/img/homepage-community.jpg" alt="A session audience at SRCCON 2016." style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Through our News Nerd Survey and SRCCON events like this one, community members share experiences. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">OpenNews closes out 2017 with two major efforts to understand and support community needs. First, we've released our <a href="/blog/news-nerd-survey-2017">annual News Nerd Survey</a>, with an expanded effort to understand career trajectories, inclusive policies, and skill-building needs. At <a href="/blog/srccon-work-open">SRCCON:WORK in December</a>, we have two days devoted to supporting one another in creating caring, collaborative workplaces.</p>
+<p class="bodybig">OpenNews closes out 2017 with two major efforts to understand and support the needs of the community working at the intersection of journalism and technology. First, we've released our <a href="/blog/news-nerd-survey-2017">annual News Nerd Survey</a>, with an expanded effort to understand career trajectories, inclusive policies, and skill-building needs. Then, at <a href="/blog/srccon-work-open">SRCCON:WORK in December</a>, we have two days devoted to supporting one another in creating caring, collaborative workplaces.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
