--- a/projects/2017-newsnerd-survey/index.html
+++ b/projects/2017-newsnerd-survey/index.html
@@ -349,7 +349,7 @@
 		<p>The community advisory group includes Soo Oh, John S. Knight Fellow; Jennifer Lee, Google News Lab; and Liam Andrew, The Texas Tribune.</p>
 		<p>The Network Impact team includes Anne Whatley, Madeleine Taylor, Amanda Rounsaville Welsh.</p>
 		<p>Project management from OpenNews by Erika Owens.</p>
-		<p>This data visualization was made by <a href="http://polygraph.cool">Polygraph</a>.</p>
+		<p>This data visualization was made by <a href="http://polygraph.cool">Polygraph</a>, advised by Alberto Cairo and Simon Rogers.</p>
 	</div>
 	<div class="footnote">
 		<h3>notes</h3>
