--- a/projects/2017-newsnerd-survey/index.html
+++ b/projects/2017-newsnerd-survey/index.html
@@ -197,7 +197,7 @@
 			</div>
 			<div class='step' data-column='Educational Background' data-filter-column='' data-filter-value='' data-special=''>
 				<div class='step__box'>
-					<div class='box__text'>A majority of respondents followed a circuitous path into journalism tech. Over half of respondents who provided information on their educational background received an undergraduate or graduate degree› in a field other than journalism or computer science.</div>
+					<div class='box__text'>A majority of respondents followed a circuitous path into journalism tech. Over half of respondents who provided information on their educational background received an undergraduate or graduate degree in a field other than journalism or computer science.</div>
 					 
 				</div>
 			</div>
