--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 </em></p>
 
 <h2>SRCCON Turns Five</h2>
-<img src="/media/img/blog/srccon_balloon.jpg" alt="A big red balloon on a blue sky" style="width: 100%">
-<p class="caption" style="margin-top: 10px;">THIS NEEDS A NEW PHOTO & CAPTION (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<img src="/media/img/srccon-breakout-session.jpg" alt="Working groups sketch sessions together at SRCCON 2016." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">We can't wait to work with the journalism community on a fifth year of SRCCON. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">This year our flagship conference SRCCON turns five and we're excited to <a href="https://www.srccon.org">bring it back to Minneapolis, Minnesota on June 28 & 29</a>. This year <a href="/blog/srccon-five/">SRCCON is evolving</a> to embrace new themes and directions and embracing a new approach to attendance that <a href="https://srccon.org/participation/">puts participation</a> right at the center. <a href="/blog/srccon-five/">Learn more about the fifth SRCCON</a> and look for our call for participation to open April 2.</p>
+<p class="bodybig">This year our flagship conference SRCCON turns five and we're excited to <a href="https://www.srccon.org">bring it back to Minneapolis, Minnesota, on June 28 & 29</a>. This year <a href="/blog/srccon-five/">SRCCON is evolving</a> to embrace new themes and directions and embracing a new approach to attendance that <a href="https://srccon.org/participation/">puts participation</a> right at the center. <a href="/blog/srccon-five/">Learn more about the fifth SRCCON</a> and look for our call for participation to open April 2.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
