--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.
 </em></p>
 
-<h2>SRCCON Turns Five</h2>
+<h2>At SRCCON, OpenNews Starts a New Chapter</h2>
 <img src="/media/img/srccon-breakout-session.jpg" alt="Working groups sketch sessions together at SRCCON 2016." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">We can't wait to work with the journalism community on a fifth year of SRCCON. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<p class="caption" style="margin-top: 10px;">Two more days of great conversations and collaborations. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">This year our flagship conference SRCCON turns five and we're excited to <a href="https://www.srccon.org">bring it back to Minneapolis, Minnesota, on June 28 & 29</a>. This year <a href="/blog/srccon-five/">SRCCON is evolving</a> to embrace new themes and directions and embracing a new approach to attendance that <a href="https://srccon.org/participation/">puts participation</a> right at the center. <a href="/blog/srccon-five/">Learn more about the fifth SRCCON</a> and look for our call for participation to open April 2.</p>
+<p class="bodybig">We're back in Minneapolis for <a href="/blog/srccon-five/">our fifth SRCCON</a>, where we get to spend two days with 300 news nerds talking about how we experiment in the open, support one another, and lead change. This year, we'll also <a href="/blog/dan-stepping-away">mark a transition at OpenNews</a> with Director Dan Sinker leaving in June and Deputy Director Erika Owens moving into the role. With this transition, we're asking for <a href="https://opennews.networkforgood.com/projects/54161">support from community members</a> to ensure our work can continue to grow and transform in the ways journalism needs.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
