fix error, swap photo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 </em></p>
 
 <h2>At SRCCON, OpenNews Starts a New Chapter</h2>
-<img src="/media/img/srccon-breakout-session.jpg" alt="Working groups sketch sessions together at SRCCON 2016." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Two more days of great conversations and collaborations. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<img src="/media/img/srccon2017conversation.jpg" alt="Participants at SRCCON 2017 listening." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">A reflective moment from SRCCON 2017. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">We're back in Minneapolis for <a href="/blog/srccon-five/">our fifth SRCCON</a>, where we get to spend two days with 300 news nerds talking about how we experiment in the open, support one another, and lead change. This year, we'll also <a href="/blog/dan-stepping-away">mark a transition at OpenNews</a> with Director Dan Sinker leaving in June and Deputy Director Erika Owens moving into the role. With this transition, we're asking for <a href="https://opennews.networkforgood.com/projects/54161">support from community members</a> to ensure our work can continue to grow and transform in the ways journalism needs.</p>
+<p class="bodybig">We're back in Minneapolis for <a href="/blog/srccon-five/">our fifth SRCCON</a>, where we get to spend two days with 300 news nerds talking about how we experiment in the open, support one another, and lead change. This year, we'll also <a href="/blog/dan-stepping-away">mark a transition at OpenNews</a> with Director Dan Sinker leaving in July and Deputy Director Erika Owens moving into the role. With this transition, we're asking for <a href="https://opennews.networkforgood.com/projects/54161">support from community members</a> to ensure our work can continue to grow and transform in the ways journalism needs.</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
