changed from jpg to JPG because why not

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 </em></p>
 
 <h2>Help OpenNews Continue to Build Great Things</h2>
-<img src="/media/img/srccon_2018.jpg" alt="Peers sharing together at SRCCON 2018." style="width: 100%">
+<img src="/media/img/srccon_2018.JPG" alt="Peers sharing together at SRCCON 2018." style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Peers sharing together at SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 <p class="bodybig">For the last seven years, OpenNews has built lasting supports for the journalism-tech community. Now we’re <a href="https://opennews.networkforgood.com/">looking for your support to continue the work</a>. Our first community-supported fundraising campaign gives an opportunity to <a href="https://opennews.networkforgood.com/">give back to OpenNews</a> so we can build new programs and resources that best reflect the needs and values of the community. At an <a href="https://opennews.org/blog/erika-srccon-transition/">exciting time for OpenNews</a> and at a time that journalism has never been more relevant, <a href="https://opennews.networkforgood.com/">contribute today</a> and help this work continue.</p>
