commented out the main page button for now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p class="caption" style="margin-top: 10px;">Peers sharing together at SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 <p class="bodybig">For the last seven years, OpenNews has built lasting supports for the journalism-tech community. Now we’re <a href="https://opennews.networkforgood.com/">looking for your support to continue the work</a>. Our first community-supported fundraising campaign gives an opportunity to <a href="https://opennews.networkforgood.com/">give back to OpenNews</a> so we can build new programs and resources that best reflect the needs and values of the community. At an <a href="https://opennews.org/blog/erika-srccon-transition/">exciting time for OpenNews</a> and at a time that journalism has never been more relevant, <a href="https://opennews.networkforgood.com/">contribute today</a> and help this work continue.</p>
-<a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a>
+
+<!--button for donation <a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a> -->
+
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
 <p>We believe a diverse community of peers working, learning, and solving problems together can create the stronger, more representative ecosystem that journalism needs to thrive. Through <a href="/what/conferences">events for newsroom coders and journalists</a> and a wide range of <a href="/what/community">community and project support programs</a>, we enable collaboration across organizations. Learn more about what we do or find out how you <a href="/getinvolved">can get involved</a>.</p>
