--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 
 <p class="bodybig">For the last seven years, OpenNews has built lasting supports for the journalism-tech community. Now we’re <a href="https://opennews.networkforgood.com/">looking for your support to continue the work</a>. Our first community-supported fundraising campaign gives an opportunity to <a href="https://opennews.networkforgood.com/">give back to OpenNews</a> so we can build new programs and resources that best reflect the needs and values of the community. At an <a href="https://opennews.org/blog/erika-srccon-transition/">exciting time for OpenNews</a> and at a time that journalism has never been more relevant, <a href="https://opennews.networkforgood.com/">contribute today</a> and help this work continue.</p>
 
-<!--button for donation <a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a> -->
+<a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
