updating donation link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 
 <p class="bodybig">Power dynamics influence how we work in newsrooms, in relationship with community, and in developing technology. This December, we're hosting <a href="https://power.srccon.org">SRCCON:POWER</a> as a chance to understand the power and responsibility we have in using technology to inform and engage. <a href="https://power.srccon.org">Join us</a>.</p>
 
-<a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a>
+<a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
