--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <img src="/media/img/srccon_2018.JPG" alt="Peers sharing together at SRCCON 2018." style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Peers sharing together at SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">Power dynamics influence how we work in newsrooms, in relationship with community, and in developing technology. This December, we're hosting <a href="https://power.srccon.org">SRCCON:POWER</a> as a chance to understand the power and responsibility we have in using technology to inform and engage. <a href="https://power.srccon.org/participation/form">The call for participation form</a> is open till October 17. <a href="https://power.srccon.org">Join us</a>.</p>
+<p class="bodybig">Power dynamics influence how we work in newsrooms, in relationship with community, and in developing technology. This December, we're hosting <a href="https://power.srccon.org">SRCCON:POWER</a> as a chance to understand the power and responsibility we have in using technology to inform and engage. <a href="https://power.srccon.org/participation/form">The call for participation form</a> is open now. <a href="https://power.srccon.org">Join us</a>.</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support Our Work Today</a>
 
