--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 layout: post_notitle
 title: OpenNews -- Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
 ---
-<p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.
-</em></p>
+<p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Our Next Event is SRCCON:POWER</h2>
-<img src="/media/img/srccon_2018.JPG" alt="Peers sharing together at SRCCON 2018." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Peers sharing together at SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<h2>Scholarships can help you connect with community</h2>
+<img src="/media/img/scholarships_events.jpg" alt="Conferences can be just the right place to connect with people working on the same problems that you are." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Conferences can be just the right place to connect with people working on the same problems that you are.</p>
 
-<p class="bodybig">Power dynamics influence how we work in newsrooms, in relationship with community, and in developing technology. This December, we're hosting <a href="https://power.srccon.org">SRCCON:POWER</a> as a chance to understand the power and responsibility we have in using technology to inform and engage. <a href="https://power.srccon.org">Follow along with us</a>.</p>
+<p class="bodybig">In-person events are so helpful at key moments in your career, and a scholarship can help get you there. Our first round of 2019 ticket+travel scholarships will support 17 news nerds in attending 8 different journalism events over the next few months. We'll open another round of scholarships soon—if you have your eye on an event coming up later this year, <a href="/what/community/scholarships/">we want you to keep in touch</a>!</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
