--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
 <h2>Scholarships can help you connect with community</h2>
-<img src="/media/img/scholarships_events.jpg" alt="Conferences can be just the right place to connect with people working on the same problems that you are." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Conferences can be just the right place to connect with people working on the same problems that you are.</p>
+<img src="/media/img/scholarships_events.jpg" alt="Conferences can be just the right place to spend time with people working on the same problems that you are." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Conferences can be just the right place to spend time with people working on the same problems that you are.</p>
 
 <p class="bodybig">In-person events are so helpful at key moments in your career, and a scholarship can help get you there. Our first round of 2019 ticket+travel scholarships will support 17 news nerds in attending 8 different journalism events over the next few months. We'll open another round of scholarships soon—if you have your eye on an event coming up later this year, <a href="/what/community/scholarships/">we want you to keep in touch</a>!</p>
 
