add scholarships post

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <img src="/media/img/scholarships_events.jpg" alt="Conferences can be just the right place to spend time with people working on the same problems that you are." style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Conferences can be just the right place to spend time with people working on the same problems that you are. (photo/<a href="https://www.bonfire.coop/">Bonfire Media Collective</a>)</p>
 
-<p class="bodybig">In-person events can change a journalist's career by expanding their network of support, and a scholarship can provide access to the just the right place at just the right time. Our first round of 2019 ticket+travel scholarships will help 17 news nerds get to 8 different journalism events over the next few months. We'll open another round of scholarships soon—if you have your eye on an event coming up later this year, <a href="/what/community/scholarships/">we want you to keep in touch</a>!</p>
+<p class="bodybig">In-person events can change a journalist's career by expanding their network of support, and [a scholarship can provide access to the just the right place at just the right time](/blog/scholarships-networks/). Our first round of 2019 ticket+travel scholarships will help 17 news nerds get to 8 different journalism events over the next few months. We'll open another round of scholarships soon—if you have your eye on an event coming up later this year, <a href="/what/community/scholarships/">we want you to keep in touch</a>!</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
