add srccon post

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Scholarships connect and expand our community</h2>
-<img src="/media/img/scholarships_events.jpg" alt="Conferences can be just the right place to spend time with people working on the same problems that you are." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Conferences can be just the right place to spend time with people working on the same problems that you are. (photo/<a href="https://www.bonfire.coop/">Bonfire Media Collective</a>)</p>
+<h2>SRCCON returns to Minneapolis!</h2>
+<img src="/media/img/srccon-mpls-2019-announce.jpg" alt="Another two days of small group conversation and collaboration, like this group from SRCCON 2018." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Another two days of conversation and collaboration, like this group from SRCCON 2018 (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
-<p class="bodybig">In-person events can change a journalist's career by expanding their network of support, and a scholarship can provide access to <a href="/blog/scholarships-networks/">just the right place at just the right time</a>. Our first round of 2019 ticket+travel scholarships will help 17 news nerds get to 8 different journalism events over the next few months. We'll open another round of scholarships soon—if you have your eye on an event coming up later this year, <a href="/what/community/scholarships/">we want you to keep in touch</a>!</p>
+<p class="bodybig">We're heading back to Minneapolis on July 11 & 12 for SRCCON 2019. The call for participation form will be open April 10-24. We're excited to spend another two days with 300 news nerds, changing how newsroom tech teams work and demonstrating new models for leadership in journalism. <a href="/blog/srccon-2019-launch">More about SRCCON 2019</a>.</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
