--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
 <h2>SRCCON returns to Minneapolis!</h2>
-<img src="/media/img/srccon-mpls-2019-announce.jpg" alt="Another two days of small group conversation and collaboration, like this group from SRCCON 2018." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Another two days of conversation and collaboration, like this group from SRCCON 2018 (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<img src="/media/img/srccon-mpls-2019-announce.jpg" alt="We'll gather for two days of conversation and collaboration, like this group from SRCCON 2018." style="width: 100%">
+<p class="caption" style="margin-top: 10px;">We'll gather for two days of conversation and collaboration, like this group from SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
 
 <p class="bodybig">We're heading back to Minneapolis on July 11 & 12 for SRCCON 2019. The call for participation form will be open April 10-24. We're excited to spend another two days with 300 news nerds, changing how newsroom tech teams work and demonstrating new models for leadership in journalism. <a href="/blog/srccon-2019-launch">More about SRCCON 2019</a>.</p>
 
