--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>It's time for SRCCON</h2>
-<img src="/media/img/srccon-mpls-2019-announce.jpg" alt="We'll gather for two days of conversation and collaboration, like this group from SRCCON 2018." style="width: 100%">
-<p class="caption" style="margin-top: 10px;">We'll gather for two days of conversation and collaboration, like this group from SRCCON 2018. (photo/<a href="http://www.westraco.com/">Erik Westra</a>)</p>
+<h2>Celebrating the Fellowship</h2>
+<img src="/media/img/2015fellowshipbox.jpg" alt="Collage of photos of Knight-Mozilla Fellows" style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Knight-Mozilla Fellows over the years.</p>
 
-<p class="bodybig">We're back in Minneapolis for SRCCON 2019. We're excited to spend another two days with 300 news nerds, changing how newsroom tech teams work and demonstrating new models for leadership in journalism. If you'd like to catch up, check out the <a href="https://srccon.org/transcription/">live transcripts</a> and learn <a href="/blog/srccon-different-leadership/">how we're thinking about this year's SRCCON</a>.</p>
+<p class="bodybig">After a hiatus and planning process, we are closing the Knight-Mozilla Fellowship program. Join us in taking a look back at the work of 33 amazing fellows. <a href="/blog/fellowship-what-next/">More about the fellowship.</a></p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
