add srccon lead post and update homepage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Celebrating the Fellowship</h2>
-<img src="/media/img/2015fellowshipbox.jpg" alt="Collage of photos of Knight-Mozilla Fellows" style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Knight-Mozilla Fellows over the years.</p>
+<h2>Our next event is SRCCON:LEAD</h2>
+<img src="/media/img/srccon-lead-audience.jpg" alt="an audience listens to a person with a microphone ask a question" style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Reimagining journalism leadership starts with listening to the community. (photo/<a href="https://www.bonfire.coop/">Bonfire Media Collective</a>)</p>
 
-<p class="bodybig">After a hiatus and planning process, we are closing the Knight-Mozilla Fellowship program. Join us in taking a look back at the work of 33 amazing fellows. <a href="/blog/fellowship-what-next/">More about the fellowship.</a></p>
+<p class="bodybig">We'll gather with 125 community members this November to figure out what journalism leadership could and should look like, and teach each other the skills to lead that change. <a href="/blog/srccon-lead/">More about SRCCON:LEAD.</a></p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
 
