--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Our next event is SRCCON:LEAD</h2>
-<img src="/media/img/srccon-lead-audience.jpg" alt="an audience listens to a person with a microphone ask a question" style="width: 100%">
-<p class="caption" style="margin-top: 10px;">Reimagining journalism leadership starts with listening to the community. (photo/<a href="https://www.bonfire.coop/">Bonfire Media Collective</a>)</p>
+<h2>Join OpenNews as a founding sustainer</h2>
+<img src="/media/img/blog/test-phot-3.jpg" alt="a session in the sanctuary at Fleisher at SRCCON:LEAD" style="width: 100%">
+<p class="caption" style="margin-top: 10px;">Sessions like this one at SRCCON:LEAD are made possible by community support. (Photo: Ryan Pitts)</p>
 
-<p class="bodybig">We'll gather with 125 community members this November to figure out what journalism leadership could and should look like, and teach each other the skills to lead that change. <a href="/blog/srccon-lead/">More about SRCCON:LEAD.</a></p>
+<p class="bodybig">We recently launched a new pathway to support the journalism-code community and OpenNews: <a href="/donate">a founding sustainer program</a> for ongoing financial contributions. This network is pushing to create more inclusive, equitable, and purpose-driven journalism, and this sustainer program offers a concrete way to support that work and the community we serve. <a href="/blog/lead-launch-sustainer/">Learn more and consider joining as a sustainer</a>.
 
-<a class="sidebar-button" href="https://opennews.networkforgood.com">Support Our Work Today</a>
+<a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
