--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <img src="/media/img/blog/test-phot-3.jpg" alt="a session in the sanctuary at Fleisher at SRCCON:LEAD" style="width: 100%">
 <p class="caption" style="margin-top: 10px;">Sessions like this one at SRCCON:LEAD are made possible by community support. (Photo: Ryan Pitts)</p>
 
-<p class="bodybig">We recently launched a new pathway to support the journalism-code community and OpenNews: <a href="/donate">a founding sustainer program</a> for ongoing financial contributions. This network is pushing to create more inclusive, equitable, and purpose-driven journalism, and this sustainer program offers a concrete way to support that work and the community we serve. <a href="/blog/lead-launch-sustainer/">Learn more and consider joining as a sustainer</a>.
+<p class="bodybig">We recently launched a new pathway to support the journalism-code community and OpenNews: <a href="/donate">a founding sustainer program</a> for ongoing financial contributions. This network is pushing to create more inclusive, equitable, and purpose-driven journalism, and this sustainer program offers a concrete way to support that work and the community we serve. <a href="/blog/lead-launch-sustainer/">Learn more and consider joining as a sustainer</a>.</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
 
@@ -18,12 +18,15 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 
 <h2 style="margin-top: 30px;">From the OpenNews Blog</h2>
 
-<ul class = "bloglist">
+<ul class="bloglist">
   {% for post in site.posts limit:10 %}
     <li>
-      <p class="blogtitle"><a href="{{ post.url }}">{{ post.title }}</a><span class="blogdate">| posted <abbr class="timeago" title="{{ post.date }}">{{ post.date }}</abbr></span></p>
-      <p class="excerpt">{{ post.excerpt }}&nbsp;<a href="{{ post.url }}">read more</a>
+      <p class="blogtitle">
+      	<a href="{{ post.url }}">{{ post.title }}</a>
+      	<span class="blogdate">| posted <abbr class="timeago" title="{{ post.date }}">{{ post.date }}</abbr></span>
+      </p>
+      <p class="excerpt">{{ post.excerpt }}&nbsp;<a href="{{ post.url }}">read more</a></p>
     </li>
   {% endfor %}
 </ul>
-<p>Read more at the <a href="/blog">OpenNews Blog.</a>
+<p>Read more at the <a href="/blog">OpenNews Blog.</a></p>
