--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Helping take community care</h2>
-<img src="/media/img/blog/2020-03-30-community-care.jpg" alt="watercolor image of words community care" style="width: 100%;">
+<h2>Helping our community take care of each other</h2>
+<img src="/media/img/blog/2020-03-30-community-care.jpg" alt="watercolor image of words 'community care'" style="width: 100%;">
 
-<p class="bodybig">As our community covers the COVID-19 pandemic, we're developing ways to take care of each other <a href="/blog/lead-launch-sustainer/">Learn more about how we're thinking about community care</a>.</p>
+<p class="bodybig">As our community covers the COVID-19 pandemic, we're developing ways we can take care of each other through mutual aid, knowledge-sharing, and healthy work-from-home culture. <a href="/blog/opennews-cornavirus-community-care/">Learn more about how we're thinking about community care</a>.</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
 
