nicer quotes on homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 <h2>Helping our community take care of each other</h2>
 <img src="/media/img/blog/2020-03-30-community-care.jpg" alt="watercolor image of words 'community care'" style="width: 100%;">
 
-<p class="bodybig">As our community covers the COVID-19 pandemic, we're developing ways we can take care of each other through mutual aid, knowledge-sharing, and healthy work-from-home culture. <a href="/blog/opennews-cornavirus-community-care/">Learn more about how we're thinking about community care</a>.</p>
+<p class="bodybig">As our community covers the COVID-19 pandemic, we&rsquo;re developing ways we can take care of each other through mutual aid, knowledge-sharing, and healthy work-from-home culture. <a href="/blog/opennews-cornavirus-community-care/">Learn more about how we&rsquo;re thinking about community care</a>.</p>
 
 <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
 
