--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@ title: OpenNews -- Connecting the journalism-tech network that collaborates on o
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>Helping our community take care of each other</h2>
+<h2>How we&rsquo;re supporting the community during COVID-19</h2>
 <img src="/media/img/blog/2020-03-30-community-care.jpg" alt="watercolor image of words 'community care'" style="width: 100%;">
 
-<p class="bodybig">As our community covers the COVID-19 pandemic, we&rsquo;re developing ways we can take care of each other through mutual aid, knowledge-sharing, and healthy work-from-home culture. <a href="/blog/opennews-cornavirus-community-care/">Learn more about how we&rsquo;re thinking about community care</a>.</p>
+<p class="bodybig"><a name="carepackage"></a>As our community covers the COVID-19 pandemic, we&rsquo;re focusing on <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
 
-<a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
+<p><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
+<ul style="margin: 0 0 1em;">
+    <li><a href="https://opennews.org/resources/covid-19-relationship-with-work/">Resources: How journalists can rethink our relationship with work during a pandemic</a></li>
+    <li><a href="https://source.opennews.org/articles/newsroom-managers-diversity-inclusivity-covid19/">Newsroom execs and managers: Ways to uphold your diversity and inclusivity values during COVID-19</a></li>
+    <li><a href="https://opennews.org/what/community/datareview">Peer Data Review: Get feedback about the data stories you&rsquo;re working on</a></li>
+    <li><a href="https://source.opennews.org/articles/tags/story-recipe/">Story Recipes: Step-by-step guides to the data you need for local outbreak coverage</a></li>
+</ul>
+</p>
+
+<p><strong>COMMUNITY PROJECTS WE&rsquo;RE SUPPORTING</strong><br/>
+<ul style="margin: 0 0 3em;">
+    <li><a href="https://microloansforjournalists.org/">Microloans for Journalists</a></li>
+    <li><a href="https://covid19.ops.guide/">The Newsroom Guide to COVID-19</a></li>
+    <li><a href="https://community.isolated.life/">Isolated creative community and online magazine</a></li>
+</ul>
+</p>
+
+<p>
+    <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
+</p>
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
