--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: post_notitle
 title: OpenNews -- Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
+image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
 <h2>How we&rsquo;re supporting the community during COVID-19</h2>
-<img src="/media/img/blog/2020-03-30-community-care.jpg" alt="watercolor image of words 'community care'" style="width: 100%;">
+<img src="/media/img/blog/2020-04-20-covid-community-care-package-main-crop.jpg" alt="watercolor image of words 'covid-19 community care package'" style="width: 100%;">
 
 <p class="bodybig"><a name="carepackage"></a>As our community covers the COVID-19 pandemic, we&rsquo;re focusing on <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
 
