--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 
 <h2>How we&rsquo;re supporting the community during COVID-19</h2>
 <img src="/media/img/blog/2020-04-20-covid-community-care-package-main-crop.jpg" alt="watercolor image of words 'covid-19 community care package'" style="width: 100%;">
+<p class="caption" style="margin-top: 5px;">(Illustration by <a href="https://emmacarewgrovum.com/">Emma Carew Grovum</a> for OpenNews)</p> 
 
 <p class="bodybig"><a name="carepackage"></a>As our community covers the COVID-19 pandemic, we&rsquo;re focusing on <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
 
