adjust carepackage link destination

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>How we&rsquo;re supporting the community during COVID-19</h2>
+<h2 id="carepackage">How we&rsquo;re supporting the community during COVID-19</h2>
 <img src="/media/img/blog/2020-04-20-covid-community-care-package-main-crop.jpg" alt="watercolor image of words 'covid-19 community care package'" style="width: 100%;">
 <p class="caption" style="margin-top: 5px;">(Illustration by <a href="https://emmacarewgrovum.com/">Emma Carew Grovum</a> for OpenNews)</p> 
 
-<p class="bodybig"><a name="carepackage"></a>As our community covers the COVID-19 pandemic, we&rsquo;re focusing on <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
+<p class="bodybig">As our community covers the COVID-19 pandemic, we&rsquo;re focusing on <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
 
 <p><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
 <ul style="margin: 0 0 1em;">
