update what we believe section on homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 
 <h2 style="margin-top: 30px;">What We Believe</h2>
 
-<p>We believe a diverse community of peers working, learning, and solving problems together can create the stronger, more representative ecosystem that journalism needs to thrive. Through <a href="/what/conferences">events for newsroom coders and journalists</a> and a wide range of <a href="/what/community">community and project support programs</a>, we enable collaboration across organizations. Learn more about what we do or find out how you <a href="/getinvolved">can get involved</a>.</p>
+<p>When a community of peers listens to each other and learns together, we build a more equitable future for journalism. By creating space for <a href="https://srccon.org/">conversations at SRCCON events</a>, helping journalists <a href="https://source.opennews.org/">share their work at Source</a>, and connecting community members through a wide <a href="/what/community">range of support programs</a>, we make it easier for people to collaborate across organizations. Learn more about what we do or find out how <a href="/getinvolved">you can get involved</a>.</p>
+
+
 
 <h2 style="margin-top: 30px;">From the OpenNews Blog</h2>
 
