--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
 <h2>This year SRCCON is online</h2>
-<img src="/media/img/srccon_2020_logo.png" alt="logo that says SRCCON 2020" style="width: 100%;">
+<a href="https://2020.srccon.org"><img src="/media/img/srccon_2020_logo.png" alt="logo that says SRCCON 2020" style="width: 100%;"></a>
 
 <p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is moving online this year. <a href="/blog/srccon-2020-cfp">Learn more and join us</a>.</p>
 
