--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 ---
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
-<h2>This year SRCCON is online</h2>
+<h2>SRCCON is online this year</h2>
 <a href="https://2020.srccon.org"><img src="/media/img/srccon_2020_logo.png" alt="logo that says SRCCON 2020" style="width: 100%;"></a>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is moving online this year. <a href="/blog/srccon-2020-cfp">Learn more and join us</a>.</p>
+<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is online this year from July 15-17, 2020. <a href="/blog/srccon-2020-cfp">Learn more and join us</a>.</p>
 
-<p><a name="carepackage"></a>SRCCON takes place as during a global pandemic and reckoning in journalism. As our community covers the COVID-19 pandemic, we gathered <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
+<p><a name="carepackage"></a>SRCCON takes place during a global pandemic and reckoning in journalism. As our community covers the COVID-19 pandemic, we gathered <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
 
 <p><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
 <ul style="margin: 0 0 1em;">
