handle missing excerpts

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: post_notitle
 title: OpenNews -- Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
+excerpt: 
 image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 ---
+
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
 
 <h2>SRCCON is online this year</h2>
