--- a/projects/2020-leavers-survey/index.html
+++ b/projects/2020-leavers-survey/index.html
@@ -721,7 +721,7 @@
                 </div>
                 <div class="large-4 cell">
                   <p>Jenny Choi, News Integrity Initiative</p>
-                  <p>Erika Owens, Sisi Wei and Ryan Pitt of OpenNews</p>    
+                  <p>Erika Owens, Sisi Wei, and Ryan Pitts of OpenNews</p>    
                   <p>Charmaine Lang, PhD candidate, Echoing Ida</p>
                   <p>Katie Donnelly, Dot Connector Studio</p>
                   <p>Angilee Shah</p>
@@ -741,7 +741,7 @@
                   <p>Meredith Clark</p>
                   <p>102 survey respondents</p>
                   <p>Jordan Michael Smith</p>
-                  <p>Nikole Hannah Jones, Arun Venugopal, Gustavo Arellano, Lewis Raven Wallace</p>
+                  <p>Nikole Hannah-Jones, Arun Venugopal, Gustavo Arellano, Lewis Raven Wallace</p>
                   <p>Scott Reinardy</p>
                   <p>Chenjerai Kumanyika</p>
                   <p>Kathy Forde</p>
