text update for leavers survey page

--- a/projects/2020-leavers-survey/index.html
+++ b/projects/2020-leavers-survey/index.html
@@ -75,8 +75,7 @@
       </div>
       <div class="grid-x grid-padding-x">
         <div class="large-10 cell">
-          <p>Results from the 'Leavers' survey of 101 former journalists of color (JOC) conducted Feb-March 2020 to understand when and why they left the journalism industry, as race/ethnic representation and accurate coverage remain a challenge in U.S. newsrooms. <a href="https://source.opennews.org/articles/introducing-leavers-results-survey/">Read the introduction to the survey.</a></p>
-          
+          <p>These are results from the 'Leavers' survey of 101 former journalists of color (JOC) conducted Feb-March 2020 to understand when and why they left the journalism industry, as race/ethnic representation and accurate coverage remain a challenge in U.S. newsrooms. <a href="https://source.opennews.org/articles/introducing-leavers-results-survey/">Read the introduction to the survey</a>. The survey was developed by Carla Murphy as a resource for current students, early and mid-career journalists of color, and newsroom managers, and is hosted by OpenNews to inform conversations across our industry.</p>
         </div>
       </div>
 
