add credit to leavers image

--- a/projects/2020-leavers-survey/index.html
+++ b/projects/2020-leavers-survey/index.html
@@ -32,7 +32,15 @@
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/add.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;400&family=IBM+Plex+Serif:wght@200;300;400&family=Open+Sans:wght@300;400;800&display=swap" rel="stylesheet">
-    
+    <style type="text/css">
+      .ccimg p {
+        float: right;
+          font-family: 'IBM Plex Mono', monospace;
+          padding-right: 20px;
+          font-size: .7rem;
+          margin-top: -5px;
+        }
+    </style>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -99,7 +107,7 @@
                 <div class="large-8 cell">
                   <div class="pair-frame-l">
                     <p>A typical 'Leaver' profile emerged from the responses to the survey. Scroll to explore a more detailed demographic picture of all 101 respondents.</p>
-                    <span class="ccimg"><img alt="A profile of the typical Leaver, an experienced, usually mid-career African-American or Black woman, aged 27-44, by @iniwil" src="assets/img/typical-leaver.png"></span>
+                    <span class="ccimg"><img alt="A profile of the typical Leaver, an experienced, usually mid-career African-American or Black woman, aged 27-44, by @iniwil" src="assets/img/typical-leaver.png"><p>Illustration by <a href="https://iniwil.github.io/">William Lager</a></p></span>
                   </div>
                   <div class="pair-frame-l">
                     <p>To capture the race/ethnic diversity within the catch-all term, JOCs, the survey allowed respondents to self-identify from 9 provided options (below) and/or write-in a response. One respondent selected 'Prefer not to say'. Write-in descriptions were: 'Brown'; 'Puerto Rican'; 'Southeast Asian'; 'BIWOC'; 'Half white'.</p>
