new splash post srccon 2020

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@ layout: post_notitle
 title: OpenNews -- Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
 image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
 ---
-<p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism.</em></p>
+<p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.</em></p>
 
-<h2>SRCCON is online this year</h2>
-<a href="https://2020.srccon.org"><img src="/media/img/srccon_2020_logo.png" alt="logo that says SRCCON 2020" style="width: 100%;"></a>
+<h2>How we’re supporting each other this year</h2>
+<a href="https://2020.srccon.org"><img src="/media/img/blog/2020-03-30-community-care.jpg" alt="Hand lettering that says Community Care" style="width: 100%;"></a>
 
-<p class="bodybig">Our annual conference for journalists who want to transform their work, their organizations, and their communities is online this year from July 15-17, 2020. <a href="/blog/srccon-2020-cfp">Learn more and join us</a>.</p>
+<p class="bodybig">In this unexpected year, we’re finding ways to <a href=”#carepackage”>take care of one another</a> while continuing to <a href=”/blog/dei-coalition-announcement/”>push for change</a>. We’re always working on new projects and events to help support this community. <a href=”http://eepurl.com/czSVTL”>Sign up to learn more</a>.</p>
 
-<p><a name="carepackage"></a>SRCCON takes place during a global pandemic and reckoning in journalism. As our community covers the COVID-19 pandemic, we gathered <a href="/blog/opennews-cornavirus-community-care/">ways we can take care of each other</a> through mutual aid, knowledge-sharing, and healthy work-from-home culture.</p>
-
-<p><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
+<p><a name="carepackage"></a><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
 <ul style="margin: 0 0 1em;">
+    <li><a href="https://brown.columbia.edu/portfolio/covid-local-news-collaboration/">COVID Local News Collaboration</a></li>
     <li><a href="https://opennews.org/resources/covid-19-relationship-with-work/">Resources: How journalists can rethink our relationship with work during a pandemic</a></li>
     <li><a href="https://source.opennews.org/articles/newsroom-managers-diversity-inclusivity-covid19/">Newsroom execs and managers: Ways to uphold your diversity and inclusivity values during COVID-19</a></li>
     <li><a href="https://opennews.org/what/community/datareview">Peer Data Review: Get feedback about the data stories you&rsquo;re working on</a></li>
