--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post_notitle
-title: OpenNews -- Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
+title: OpenNews — Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
 excerpt: 
-image: /media/img/blog/2020-04-20-covid-community-care-package-social-crop.jpg
+image: /media/img/blog/2020-03-30-community-care.jpg
 ---
 
 <p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.</em></p>
