update leavers text

--- a/projects/2020-leavers-survey/index.html
+++ b/projects/2020-leavers-survey/index.html
@@ -697,7 +697,7 @@
                     
                     <!-- <div class="pair-frame-l">   -->
                       <div class="special-callout">
-                        <p>A sample of the wave of reactions to the 'Leavers' Survey report published since August of 2020</p>
+                        <p>A sample of reactions to the 'Leavers' report since August 2020.</p>
                       </div>
                     <!-- </div> -->
 
