--- a/index.html
+++ b/index.html
@@ -5,42 +5,21 @@ excerpt:
 image: /media/img/blog/2020-03-30-community-care.jpg
 ---
 
-<p><em>OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.</em></p>
-
+<p><a name="carepackage" href="/what/community/covid19-care-package" class="topline"><img src="/media/img/blog/2020-03-30-community-care.jpg" alt="Hand lettering that says Community Care" style="width: 100%;"></a></p>
 <h2>How we’re supporting each other this year</h2>
-<a href="https://2020.srccon.org"><img src="/media/img/blog/2020-03-30-community-care.jpg" alt="Hand lettering that says Community Care" style="width: 100%;"></a>
 
-<p class="bodybig">In this unexpected year, we’re finding ways to <a href=”#carepackage”>take care of one another</a> while continuing to <a href=”/blog/dei-coalition-announcement/”>push for change</a>. We’re always working on new projects and events to help support this community. <a href=”http://eepurl.com/czSVTL”>Sign up to learn more</a>.</p>
+<p class="bodybig">In this unexpected year, we’re finding ways to <a href="/what/community/covid19-care-package">take care of one another</a> while continuing to <a href="/blog/dei-coalition-announcement/">push for change</a>. We’re always working on new projects and events to help support this community. <a href="/what/community/covid19-care-package">Go to our COVID-19 Community Care Package.</a></p>
 
-<p><a name="carepackage"></a><strong>COVID-19 COMMUNITY CARE PACKAGE</strong><br/>
-<ul style="margin: 0 0 1em;">
-    <li><a href="https://brown.columbia.edu/portfolio/covid-local-news-collaboration/">COVID Local News Collaboration</a></li>
-    <li><a href="https://opennews.org/resources/covid-19-relationship-with-work/">Resources: How journalists can rethink our relationship with work during a pandemic</a></li>
-    <li><a href="https://source.opennews.org/articles/newsroom-managers-diversity-inclusivity-covid19/">Newsroom execs and managers: Ways to uphold your diversity and inclusivity values during COVID-19</a></li>
-    <li><a href="https://opennews.org/what/community/datareview">Peer Data Review: Get feedback about the data stories you&rsquo;re working on</a></li>
-    <li><a href="https://source.opennews.org/articles/tags/story-recipe/">Story Recipes: Step-by-step guides to the data you need for local outbreak coverage</a></li>
-</ul>
-</p>
-
-<p><strong>COMMUNITY PROJECTS WE&rsquo;RE SUPPORTING</strong><br/>
-<ul style="margin: 0 0 3em;">
-    <li><a href="https://microloansforjournalists.org/">Microloans for Journalists</a></li>
-    <li><a href="https://covid19.ops.guide/">The Newsroom Guide to COVID-19</a></li>
-    <li><a href="https://community.isolated.life/">Isolated creative community and online magazine</a></li>
-</ul>
-</p>
-
-<p>
-    <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
-</p>
-
-<h2 style="margin-top: 30px;">What We Believe</h2>
+<h2 style="margin-top: 0px;">What We Believe</h2>
 
 <p>When a community of peers listens to each other and learns together, we build a more equitable future for journalism. By creating space for <a href="https://srccon.org/">conversations at SRCCON events</a>, helping journalists <a href="https://source.opennews.org/">share their work at Source</a>, and connecting community members through a wide <a href="/what/community">range of support programs</a>, we make it easier for people to collaborate across organizations. Learn more about what we do or find out how <a href="/getinvolved">you can get involved</a>.</p>
 
+<!-- <p>
+    <a class="sidebar-button" href="https://opennews.networkforgood.com">Become a sustainer</a>
+</p>
+ -->
 
-
-<h2 style="margin-top: 30px;">From the OpenNews Blog</h2>
+<h2 style="margin-top: 30px;">Latest from the OpenNews Team</h2>
 
 <ul class="bloglist">
   {% for post in site.posts limit:10 %}
