homepage update with srccon heart blurb

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@ excerpt:
 image: /media/img/blog/2020-03-30-community-care.jpg
 ---
 
-<p><a name="carepackage" href="/what/community/covid19-care-package" class="topline"><img src="/media/img/blog/2020-03-30-community-care.jpg" alt="Hand lettering that says Community Care" style="width: 100%;"></a></p>
-<h2>How we’re supporting each other this year</h2>
+<p><a name="srccon-heart" href="https://srccon.org/srccon-heart-2020/"><img src="/media/img/srccon_heart_header.png" alt="the event logo for SRCCON:HEART, which takes place online on December 17, 2020" style="width: 100%;"></a></p>
 
-<p class="bodybig">In this unexpected year, we’re finding ways to <a href="/what/community/covid19-care-package">take care of one another</a> while continuing to <a href="/blog/dei-coalition-announcement/">push for change</a>. We’re always working on new projects and events to help support this community. <a href="/what/community/covid19-care-package">Go to our COVID-19 Community Care Package.</a></p>
+<h2>A community celebration: What—and who—Helped us get through this year</h2>
 
-<h2 style="margin-top: 0px;">What We Believe</h2>
+<p class="bodybig" style="margin-bottom: 3em;">We’re going to close down 2020 with some time to party, reflect, relax, and catch up with each other. Join us for a day of activities and celebration of YOU, the people who lead and sustain this work of transforming journalism. <a href="https://srccon.org/srccon-heart-2020/">Find out more about SRCCON:❤️</a> and <a href="https://www.eventbrite.com/e/130622460295/">grab your ticket</a>, which is free for OpenNews sustainers.</p>
+
+
+
+
+
+<h2 style="margin-top: 30px;">How we’re supporting each other</h2>
+
+<p>In this unexpected year, we’re finding ways to <a href="/what/community/covid19-care-package">take care of one another</a> while continuing to <a href="/blog/dei-coalition-announcement/">push for change</a>. We’re always working on new projects and events to help support this community. <a href="/what/community/covid19-care-package">Go to our COVID-19 Community Care Package.</a></p>
+
+<h2 style="margin-top: 30px;">What We Believe</h2>
 
 <p>When a community of peers listens to each other and learns together, we build a more equitable future for journalism. By creating space for <a href="https://srccon.org/">conversations at SRCCON events</a>, helping journalists <a href="https://source.opennews.org/">share their work at Source</a>, and connecting community members through a wide <a href="/what/community">range of support programs</a>, we make it easier for people to collaborate across organizations. Learn more about what we do or find out how <a href="/getinvolved">you can get involved</a>.</p>
 
