update srccon heart image on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ excerpt:
 image: /media/img/blog/2020-03-30-community-care.jpg
 ---
 
-<p><a name="srccon-heart" href="https://srccon.org/srccon-heart-2020/"><img src="/media/img/srccon_heart_header.png" alt="the event logo for SRCCON:HEART, which takes place online on December 17, 2020" style="width: 100%;"></a></p>
+<p><a name="srccon-heart" href="https://srccon.org/srccon-heart-2020/"><img src="/media/img/srccon_heart_watercolor.jpg" alt="the event logo for SRCCON:HEART, which takes place online on December 17, 2020" style="width: 100%;"></a></p>
 
 <h2>A community celebration: What—and who—Helped us get through this year</h2>
 
