homepage but no art yet

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ excerpt:
 image: /media/img/blog/end-of-year-2020.png
 ---
 
-<p><a href="https://opennews.org/blog/year-end-change-2020/"><img src="/media/img/end-of-year-2020.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
-<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">Screenshot of SRCCON:❤️ participants.</p>
+<!-- <p><a href="https://opennews.org/blog/year-end-change-2020/"><img src="/media/img/end-of-year-2020.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
+<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">Screenshot of SRCCON:❤️ participants.</p> -->
 
-<h2>What we did together in 2020</h2>
+<h2>DEI Coalition Slack is Live!</h2>
 
-<p class="bodybig">As we close down 2020, we’re reflecting on how we got through it together and what we were able to do for and with each other. As one community member said, this community sets “the bar for how to be wonderful, gracious, thoughtful change agents in journalism.” <a href="https://opennews.org/blog/year-end-change-2020/">Read more about our 2020 together.</a></p>
+<p class="bodybig"><a href="/what/community/dei-coalition/join/">Join the DEI Coalition Slack</a>, a digital space co-created by OpenNews and over 100 members of the journalism community dedicated to sharing knowledge and taking concrete action in service of a more anti-racist, equitable, and just journalism industry.</p>
 
-<p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
-</p>
+<!-- <p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
+</p> -->
 
 <h2 style="margin-top: 30px;">How we’re supporting each other</h2>
 
