adding our images

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: post_notitle
 title: OpenNews — Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
 excerpt: 
-image: /media/img/blog/end-of-year-2020.png
+<!-- image: /media/img/dei-coalition/dei-card-A1.png -->
 ---
 
-<!-- <p><a href="https://opennews.org/blog/year-end-change-2020/"><img src="/media/img/end-of-year-2020.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
-<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">Screenshot of SRCCON:❤️ participants.</p> -->
+<p><a href="/what/community/dei-coalition/join/"><img src="/media/img/dei-coalition/dei-card-A1.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
+<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">We've officially live! <a href="/what/community/dei-coalition/join/">Join now</a>.</p>
 
 <h2>DEI Coalition Slack is Live!</h2>
 
